force-app/main/default/objects/Contact/fields/Advance_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Advance_Deposit__c</fullName>
    <label>Advance Deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>