force-app/main/default/objects/Contact/fields/InComing__c.field-meta.xml
<CustomField>
    <fullName>InComing__c</fullName>
    <label>InComing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>