force-app/main/default/objects/Contact/fields/OutGoing__c.field-meta.xml
<CustomField>
    <fullName>OutGoing__c</fullName>
    <label>OutGoing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>