force-app/main/default/objects/Contact/fields/Upi_Ids__c.field-meta.xml
<CustomField>
    <fullName>Upi_Ids__c</fullName>
    <label>Upi Ids</label>
    <type>TextArea</type>
</CustomField>