force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>Advance_Deposit__c</columns>
    <columns>InComing__c</columns>
    <columns>Balance__c</columns>
    <columns>OutGoing__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>Upi_Ids__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>